		line. If the second line started with spaces, that was ok, but if it started with, say, the name of
		a node, then that name was concatenated with what could have been a node name on the end of a previous
		line. This meant 2 separate node names sometimes became one.
	- Add data/52.gv to test the solution.

1.04  Tue Sep 25 13:55:00 2012
	- All data/*.dot files were renamed to data/*.gv, in line with Graphviz itself.
	- Design change. In the output streams from both the lexer and the parser, the 3 special tokens whose names
		are edge, graph and node, were given the type node_id. Unfortunately, this is confusing because any
		normal edge, graph or node was also given that type. Now, these 3 cases are of type class_id.
		This makes it easier for code processing these output streams to distinguish between special cases
		and common-or-garden nodes. It should have always been done this way, and specifically simplifies code
		in GraphViz2::Marpa::TreeUtils.
	- Change Marpa.pm to support the new distro GraphViz2::Marpa::TreeUtils, which is a sub-class of GraphViz2::Marpa.
		Specifically, the lexer and the parser are stored in mutators called lexer() and parser(),
		so they can be called from sub-classes.
	- This means any shell scripts using -l now need -lexed_file, and if using -p now need -parsed_file.
	- This in turns means patches to various scripts (scripts/*.sh and scripts/*.pl).
	- The opportunity was taken to spell out all command line option names in shell scripts.
	- Update POD to reflect these changes.

1.03  Mon Sep  3 09:28:00 2012
	- Remove unused dependency Module::UseFrom.
	- Fix disastrous bug in the parser. Test with data/90.Petersen.dot.
	- Add README.
	- Rename scripts/generate.demo.pl to scripts/generate.index.pl, since it does not run all demos,
		it just creates html/index.html.
	- Add FAQ item in GraphViz2::Marpa about how to re-create demo files.

1.02  Fri Jun 22 11:50:00 2012