@@ -12,6 +12,8 @@ line. If the second line started with spaces, that was ok, but if it started wit
 a node, then that name was concatenated with what could have been a node name on the end of a previous
 line. This meant 2 separate node names sometimes became one.
 - Add data/52.gv to test the solution.
+- Shift data/code.attributes.html to html/.
+- Shift data/default.stt.html to html/.
 EOT
 
 [V 1.04]
