@@ -57,32 +57,6 @@
          }
       }
    },
-   "provides" : {
-      "GraphViz2::Marpa" : {
-         "file" : "lib/GraphViz2/Marpa.pm",
-         "version" : "1.05"
-      },
-      "GraphViz2::Marpa::Lexer" : {
-         "file" : "lib/GraphViz2/Marpa/Lexer.pm",
-         "version" : "1.05"
-      },
-      "GraphViz2::Marpa::Lexer::DFA" : {
-         "file" : "lib/GraphViz2/Marpa/Lexer/DFA.pm",
-         "version" : "1.05"
-      },
-      "GraphViz2::Marpa::Parser" : {
-         "file" : "lib/GraphViz2/Marpa/Parser.pm",
-         "version" : "1.05"
-      },
-      "GraphViz2::Marpa::Renderer::GraphViz2" : {
-         "file" : "lib/GraphViz2/Marpa/Renderer/GraphViz2.pm",
-         "version" : "1.05"
-      },
-      "GraphViz2::Marpa::Utils" : {
-         "file" : "lib/GraphViz2/Marpa/Utils.pm",
-         "version" : "1.05"
-      }
-   },
    "release_status" : "stable",
    "resources" : {
       "license" : [
