@@ -14,25 +14,6 @@ meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: GraphViz2-Marpa
-provides:
-  GraphViz2::Marpa:
-    file: lib/GraphViz2/Marpa.pm
-    version: 1.05
-  GraphViz2::Marpa::Lexer:
-    file: lib/GraphViz2/Marpa/Lexer.pm
-    version: 1.05
-  GraphViz2::Marpa::Lexer::DFA:
-    file: lib/GraphViz2/Marpa/Lexer/DFA.pm
-    version: 1.05
-  GraphViz2::Marpa::Parser:
-    file: lib/GraphViz2/Marpa/Parser.pm
-    version: 1.05
-  GraphViz2::Marpa::Renderer::GraphViz2:
-    file: lib/GraphViz2/Marpa/Renderer/GraphViz2.pm
-    version: 1.05
-  GraphViz2::Marpa::Utils:
-    file: lib/GraphViz2/Marpa/Utils.pm
-    version: 1.05
 requires:
   Algorithm::Diff: 1.1902
   Data::Section::Simple: 0.02
