@@ -7,6 +7,8 @@ Revision history for Perl extension GraphViz2::Marpa.
 		a node, then that name was concatenated with what could have been a node name on the end of a previous
 		line. This meant 2 separate node names sometimes became one.
 	- Add data/52.gv to test the solution.
+	- Shift data/code.attributes.html to html/.
+	- Shift data/default.stt.html to html/.
 
 1.04  Tue Sep 25 13:55:00 2012
 	- All data/*.dot files were renamed to data/*.gv, in line with Graphviz itself.
